--- a/index.html
+++ b/index.html
@@ -3,34 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirate - Surveillance en Cours</title>
+    <title>Page Piège Apple</title>
     <style>
         body {
-            font-family: "Courier New", Courier, monospace;
-            background-color: #111;
-            color: #00FF00;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
             text-align: center;
             padding: 20px;
             margin: 0;
-            overflow: hidden;
         }
         h1 {
-            color: #FF0000;
-            font-size: 24px;
-            margin-top: 20px;
+            color: #333;
         }
-        #terminal {
-            background-color: black;
-            width: 100%;
-            height: 300px;
-            padding: 10px;
-            border: 1px solid #00FF00;
+        p {
             font-size: 18px;
-            line-height: 1.5;
-            white-space: pre-wrap;
-            text-align: left;
-            margin-top: 20px;
-            display: none;
+            color: #555;
+        }
+        a {
+            color: #1e90ff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
         }
         .button {
             background-color: #1e90ff;
@@ -39,131 +34,138 @@
             border-radius: 5px;
             text-decoration: none;
             font-size: 18px;
+        }
+        .audio-container {
+            margin: 20px 0;
+        }
+        .qr-container {
             margin-top: 20px;
         }
-        .countdown {
-            font-size: 24px;
-            color: #FF0000;
-            margin-top: 20px;
+        .qr-code {
+            width: 150px;
+            height: 150px;
         }
-        .blackout {
+        .terminal {
             display: none;
-            background-color: black;
-            color: white;
-            height: 100vh;
-            width: 100vw;
-            position: absolute;
-            top: 0;
-            left: 0;
-            text-align: center;
-            padding-top: 20%;
-            z-index: 1000;
-        }
-        .loading-bar-container {
+            background-color: #000;
+            color: #0f0;
+            font-family: monospace;
+            padding: 20px;
             margin-top: 20px;
+            height: 300px;
+            overflow-y: scroll;
         }
         .loading-bar {
             width: 0;
-            height: 30px;
-            background-color: #00FF00;
-            border-radius: 5px;
+            height: 10px;
+            background-color: #00ff00;
+            margin-top: 20px;
+        }
+        .countdown {
+            font-size: 30px;
+            font-weight: bold;
+            color: red;
+            margin-top: 20px;
         }
     </style>
+</head>
+<body>
+
+    <h1>⚠️ ATTENTION : PIRATAGE EN COURS ⚠️</h1>
+    <p><strong>Votre appareil est sous surveillance par Apple.</strong></p>
+    <p><strong>Écoutez attentivement ce message et cliquez pour plus d'informations.</strong></p>
+
+    <!-- Message audio cliquable -->
+    <div class="audio-container">
+        <a href="#" onclick="startHack()">
+            <audio controls>
+                <source src="https://userfall.github.io/fake-apple-logs/assets/message.mp3" type="audio/mpeg">
+                Votre navigateur ne prend pas en charge la balise audio.
+            </audio>
+        </a>
+    </div>
+
+    <!-- Terminal virtuel pour afficher les lignes de code -->
+    <div class="terminal" id="terminal">
+        <pre id="log"></pre>
+    </div>
+
+    <!-- Barre de chargement -->
+    <div class="loading-bar" id="loadingBar"></div>
+
+    <!-- Compte à rebours avant extinction -->
+    <div class="countdown" id="countdown">Votre téléphone va s'éteindre dans <span id="timeLeft">10</span> secondes...</div>
+
+    <footer>
+        <p>© 2025 Piège Apple. Tous droits réservés.</p>
+    </footer>
+
     <script>
-        let countdownTime = 10;
-        let terminalContent = [
-            "Connexion à Apple Surveillance Network...",
-            "Échec de la vérification de l'authentification...",
-            "Détection d'une faille de sécurité majeure...",
-            "Activation du microphone et localisation en cours...",
-            "Recueilli : Position GPS | Données personnelles | Historique de navigation",
-            "Processus de piratage en cours...",
-            "Erreur : Accès illégal détecté !",
-            "Redémarrage imminent du système...",
-            "Erreur critique ! Vous êtes victime d'une attaque...",
-            "Téléphone éteint. Processus finalisés."
-        ];
-        let terminalIndex = 0;
+        function startHack() {
+            // Masquer l'audio après le clic
+            document.querySelector('.audio-container').style.display = 'none';
 
-        function fakeHacking() {
-            document.getElementById("terminal").style.display = "block";
-            showTerminalOutput();
-            startLoadingBar();
-            startCountdown();
-        }
+            // Afficher le terminal de piratage
+            document.getElementById('terminal').style.display = 'block';
 
-        function showTerminalOutput() {
-            if (terminalIndex < terminalContent.length) {
-                let terminal = document.getElementById("terminal");
-                terminal.innerHTML += terminalContent[terminalIndex] + "\n";
-                terminal.scrollTop = terminal.scrollHeight; // Défilement automatique
-                terminalIndex++;
-                setTimeout(showTerminalOutput, 1500); // Affiche les lignes une par une
-            } else {
-                setTimeout(phoneShutDown, 2000); // Attente avant de simuler l'extinction
-            }
-        }
+            // Lancer la simulation du piratage (lignes de code)
+            let logs = [
+                "Connexion à Apple Surveillance Network...",
+                "Échec de la vérification de l'authentification...",
+                "Détection d'une faille de sécurité majeure...",
+                "Recueilli : Position GPS | Données personnelles | Historique de navigation",
+                "Erreur : Accès illégal détecté !",
+                "Redémarrage imminent du système...",
+                "Activation du mode sécurisé...",
+                "Système en cours de désactivation...",
+                "Votre appareil sera verrouillé dans 10 secondes..."
+            ];
+            let logIndex = 0;
+            let logInterval = setInterval(function() {
+                if (logIndex < logs.length) {
+                    document.getElementById('log').textContent += logs[logIndex] + '\n';
+                    logIndex++;
+                } else {
+                    clearInterval(logInterval);
+                    triggerCountdown(); // Lancer le compte à rebours
+                }
+            }, 1500); // Simule la vitesse du piratage
 
-        function startLoadingBar() {
-            let loadingBar = document.getElementById("loadingBar");
+            // Lancer la barre de chargement
+            let loadingBar = document.getElementById('loadingBar');
             let width = 0;
             let loadingInterval = setInterval(function() {
                 if (width >= 100) {
                     clearInterval(loadingInterval);
                 } else {
                     width++;
-                    loadingBar.style.width = width + "%";
+                    loadingBar.style.width = width + '%';
                 }
-            }, 50); // Le chargement se fait sur 5 secondes
+            }, 30); // Simule la progression de la barre de chargement
         }
 
-        function startCountdown() {
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-            const countdownInterval = setInterval(function() {
-                countdownTime--;
-                countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-                if (countdownTime <= 0) {
+        // Compte à rebours avant extinction du téléphone
+        function triggerCountdown() {
+            let timeLeft = 10;
+            let countdownInterval = setInterval(function() {
+                document.getElementById('timeLeft').textContent = timeLeft;
+                if (timeLeft <= 0) {
                     clearInterval(countdownInterval);
-                    phoneShutDown();
+                    triggerShutdown();
+                } else {
+                    timeLeft--;
                 }
-            }, 1000);
+            }, 1000); // Réduit le temps chaque seconde
         }
 
-        function phoneShutDown() {
-            const blackoutElement = document.getElementById('blackout');
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.style.display = 'none';
-            blackoutElement.style.display = 'block';
-            blackoutElement.innerHTML = "<h1>Téléphone éteint</h1>";
+        // Simuler l'extinction du téléphone
+        function triggerShutdown() {
+            document.body.style.backgroundColor = '#000'; // Met l'écran en noir
+            document.body.style.color = '#fff';
+            document.getElementById('terminal').style.display = 'none'; // Masquer le terminal
+            document.getElementById('countdown').textContent = "Téléphone éteint.";
         }
     </script>
-</head>
-<body>
-
-    <h1>⚠️ ATTENTION : PIRATAGE EN COURS ⚠️</h1>
-    <p><strong>Votre appareil est sous surveillance. Vos données sont compromises.</strong></p>
-    <p><strong>Cliquez sur le bouton ci-dessous pour voir les logs secrets et observer l'attaque en temps réel.</strong></p>
-
-    <a href="javascript:void(0);" class="button" onclick="fakeHacking()">Cliquez ici pour voir les logs secrets</a>
-
-    <!-- Terminal qui simule l'attaque -->
-    <div id="terminal"></div>
-
-    <!-- Barre de chargement pour l'effet de piratage -->
-    <div class="loading-bar-container">
-        <div id="loadingBar" class="loading-bar"></div>
-    </div>
-
-    <!-- Compte à rebours avant extinction -->
-    <p id="countdown" class="countdown"></p>
-
-    <!-- Écran noir simulant l'extinction du téléphone -->
-    <div id="blackout" class="blackout"></div>
-
-    <footer>
-        <p>© 2025 Piège Apple. Tous droits réservés.</p>
-    </footer>
 
 </body>
 </html>
