--- a/index.html
+++ b/index.html
@@ -70,100 +70,9 @@
         }
     </style>
     <script>
-        let countdownTime = 10;
+        let countdownTime = 15; // Changement du compte à rebours à 15 secondes
         let terminalContent = [
             "Connexion à Apple Surveillance Network...",
             "Échec de la vérification de l'authentification...",
             "Détection d'une faille de sécurité majeure...",
-            "Activation du microphone et localisation en cours...",
-            "Recueilli : Position GPS | Données personnelles | Historique de navigation",
-            "Processus de piratage en cours...",
-            "Erreur : Accès illégal détecté !",
-            "Redémarrage imminent du système...",
-            "Erreur critique ! Vous êtes victime d'une attaque...",
-            "Téléphone éteint. Processus finalisés."
-        ];
-        let terminalIndex = 0;
-
-        function fakeHacking() {
-            document.getElementById("terminal").style.display = "block";
-            showTerminalOutput();
-            startLoadingBar();
-            startCountdown();
-        }
-
-        function showTerminalOutput() {
-            if (terminalIndex < terminalContent.length) {
-                let terminal = document.getElementById("terminal");
-                terminal.innerHTML += terminalContent[terminalIndex] + "\n";
-                terminal.scrollTop = terminal.scrollHeight; // Défilement automatique
-                terminalIndex++;
-                setTimeout(showTerminalOutput, 1500); // Affiche les lignes une par une
-            } else {
-                setTimeout(phoneShutDown, 2000); // Attente avant de simuler l'extinction
-            }
-        }
-
-        function startLoadingBar() {
-            let loadingBar = document.getElementById("loadingBar");
-            let width = 0;
-            let loadingInterval = setInterval(function() {
-                if (width >= 100) {
-                    clearInterval(loadingInterval);
-                } else {
-                    width++;
-                    loadingBar.style.width = width + "%";
-                }
-            }, 50); // Le chargement se fait sur 5 secondes
-        }
-
-        function startCountdown() {
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-            const countdownInterval = setInterval(function() {
-                countdownTime--;
-                countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-                if (countdownTime <= 0) {
-                    clearInterval(countdownInterval);
-                    phoneShutDown();
-                }
-            }, 1000);
-        }
-
-        function phoneShutDown() {
-            const blackoutElement = document.getElementById('blackout');
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.style.display = 'none';
-            blackoutElement.style.display = 'block';
-            blackoutElement.innerHTML = "<h1>Téléphone éteint</h1>";
-        }
-    </script>
-</head>
-<body>
-
-    <h1>⚠️ ATTENTION : PIRATAGE EN COURS ⚠️</h1>
-    <p><strong>Votre appareil est sous surveillance. Vos données sont compromises.</strong></p>
-    <p><strong>Cliquez sur le bouton ci-dessous pour voir les logs secrets et observer l'attaque en temps réel.</strong></p>
-
-    <a href="javascript:void(0);" class="button" onclick="fakeHacking()">Cliquez ici pour voir les logs secrets</a>
-
-    <!-- Terminal qui simule l'attaque -->
-    <div id="terminal"></div>
-
-    <!-- Barre de chargement pour l'effet de piratage -->
-    <div class="loading-bar-container">
-        <div id="loadingBar" class="loading-bar"></div>
-    </div>
-
-    <!-- Compte à rebours avant extinction -->
-    <p id="countdown" class="countdown"></p>
-
-    <!-- Écran noir simulant l'extinction du téléphone -->
-    <div id="blackout" class="blackout"></div>
-
-    <footer>
-        <p>© 2025 Piège Apple. Tous droits réservés.</p>
-    </footer>
-
-</body>
-</html>
+            "Activation du microphone et localisation en
