--- a/index.html
+++ b/index.html
@@ -70,9 +70,112 @@
         }
     </style>
     <script>
-        let countdownTime = 15; // Changement du compte à rebours à 15 secondes
+        let countdownTime = 15; // Compte à rebours à 15 secondes
         let terminalContent = [
             "Connexion à Apple Surveillance Network...",
             "Échec de la vérification de l'authentification...",
             "Détection d'une faille de sécurité majeure...",
-            "Activation du microphone et localisation en
+            "Activation du microphone et localisation en cours...",
+            "Recueilli : Position GPS | Données personnelles | Historique de navigation",
+            "Processus de piratage en cours...",
+            "Erreur : Accès illégal détecté !",
+            "Redémarrage imminent du système...",
+            "Erreur critique ! Vous êtes victime d'une attaque...",
+            "Téléphone éteint. Processus finalisés."
+        ];
+        let terminalIndex = 0;
+
+        // Fonction pour démarrer l'attaque
+        function fakeHacking() {
+            document.getElementById("terminal").style.display = "block";
+            showTerminalOutput();
+            startLoadingBar();
+            startCountdown();
+            playSound();
+        }
+
+        // Afficher les lignes dans le terminal
+        function showTerminalOutput() {
+            if (terminalIndex < terminalContent.length) {
+                let terminal = document.getElementById("terminal");
+                terminal.innerHTML += terminalContent[terminalIndex] + "\n";
+                terminal.scrollTop = terminal.scrollHeight;
+                terminalIndex++;
+                setTimeout(showTerminalOutput, 1500); // Affichage des lignes une par une
+            } else {
+                setTimeout(phoneShutDown, 2000); // Attente avant de simuler l'extinction
+            }
+        }
+
+        // Fonction de la barre de chargement
+        function startLoadingBar() {
+            let loadingBar = document.getElementById("loadingBar");
+            let width = 0;
+            let loadingInterval = setInterval(function() {
+                if (width >= 100) {
+                    clearInterval(loadingInterval);
+                } else {
+                    width++;
+                    loadingBar.style.width = width + "%";
+                }
+            }, 50);
+        }
+
+        // Fonction de compte à rebours
+        function startCountdown() {
+            const countdownElement = document.getElementById('countdown');
+            countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
+            const countdownInterval = setInterval(function() {
+                countdownTime--;
+                countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
+                if (countdownTime <= 0) {
+                    clearInterval(countdownInterval);
+                    phoneShutDown();
+                }
+            }, 1000);
+        }
+
+        // Extinction du téléphone et message de fin
+        function phoneShutDown() {
+            const blackoutElement = document.getElementById('blackout');
+            const countdownElement = document.getElementById('countdown');
+            countdownElement.style.display = 'none';
+            blackoutElement.style.display = 'block';
+            blackoutElement.innerHTML = "<h1>Téléphone éteint</h1><p>By Kabir</p>";
+        }
+
+        // Fonction pour jouer un son d'attaque
+        function playSound() {
+            const audio = new Audio('attack-sound.mp3'); // Assurez-vous d'avoir un fichier audio avec ce nom
+            audio.play();
+        }
+    </script>
+</head>
+<body>
+
+    <h1>⚠️ ATTENTION : PIRATAGE EN COURS ⚠️</h1>
+    <p><strong>Votre appareil est sous surveillance. Vos données sont compromises.</strong></p>
+    <p><strong>Cliquez sur le bouton ci-dessous pour voir les logs secrets et observer l'attaque en temps réel.</strong></p>
+
+    <a href="javascript:void(0);" class="button" onclick="fakeHacking()">Cliquez ici pour voir les logs secrets</a>
+
+    <!-- Terminal simulant l'attaque -->
+    <div id="terminal"></div>
+
+    <!-- Barre de chargement -->
+    <div class="loading-bar-container">
+        <div id="loadingBar" class="loading-bar"></div>
+    </div>
+
+    <!-- Compte à rebours avant extinction -->
+    <p id="countdown" class="countdown"></p>
+
+    <!-- Écran noir simulant l'extinction du téléphone -->
+    <div id="blackout" class="blackout"></div>
+
+    <footer>
+        <p>© 2025 Piège Apple. Tous droits réservés.</p>
+    </footer>
+
+</body>
+</html>
