--- a/index.html
+++ b/index.html
@@ -10,42 +10,60 @@
             background-color: #111;
             color: #00FF00;
             text-align: center;
-            padding: 20px;
+            padding: 0;
             margin: 0;
             overflow: hidden;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
+
         h1 {
             color: #FF0000;
-            font-size: 24px;
+            font-size: 36px;
             margin-top: 20px;
         }
+
         #terminal {
             background-color: black;
-            width: 100%;
-            height: 300px;
-            padding: 10px;
+            width: 100vw;
+            height: 100vh;
+            padding: 20px;
             border: 1px solid #00FF00;
-            font-size: 18px;
+            font-size: 22px;
             line-height: 1.5;
             white-space: pre-wrap;
             text-align: left;
             margin-top: 20px;
+            overflow-y: scroll;
             display: none;
+            color: #00FF00;
         }
-        .button {
-            background-color: #1e90ff;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 18px;
-            margin-top: 20px;
-        }
+
         .countdown {
-            font-size: 24px;
+            font-size: 36px;
             color: #FF0000;
             margin-top: 20px;
+            font-weight: bold;
         }
+
+        .loading-bar-container {
+            margin-top: 20px;
+            width: 100%;
+            height: 30px;
+            background-color: #222;
+            border-radius: 5px;
+        }
+
+        .loading-bar {
+            width: 0;
+            height: 100%;
+            background-color: #00FF00;
+            border-radius: 5px;
+        }
+
         .blackout {
             display: none;
             background-color: black;
@@ -59,14 +77,15 @@
             padding-top: 20%;
             z-index: 1000;
         }
-        .loading-bar-container {
-            margin-top: 20px;
-        }
-        .loading-bar {
-            width: 0;
-            height: 30px;
-            background-color: #00FF00;
+
+        .button {
+            background-color: #1e90ff;
+            color: white;
+            padding: 10px 20px;
             border-radius: 5px;
+            text-decoration: none;
+            font-size: 18px;
+            margin-top: 20px;
         }
     </style>
     <script>
@@ -79,91 +98,4 @@
             "Recueilli : Position GPS | Données personnelles | Historique de navigation",
             "Processus de piratage en cours...",
             "Erreur : Accès illégal détecté !",
-            "Redémarrage imminent du système...",
-            "Erreur critique ! Vous êtes victime d'une attaque...",
-            "Téléphone éteint. Processus finalisés."
-        ];
-        let terminalIndex = 0;
-
-        function fakeHacking() {
-            document.getElementById("terminal").style.display = "block";
-            showTerminalOutput();
-            startLoadingBar();
-            startCountdown();
-        }
-
-        function showTerminalOutput() {
-            if (terminalIndex < terminalContent.length) {
-                let terminal = document.getElementById("terminal");
-                terminal.innerHTML += terminalContent[terminalIndex] + "\n";
-                terminal.scrollTop = terminal.scrollHeight; // Défilement automatique
-                terminalIndex++;
-                setTimeout(showTerminalOutput, 1500); // Affiche les lignes une par une
-            } else {
-                setTimeout(phoneShutDown, 2000); // Attente avant de simuler l'extinction
-            }
-        }
-
-        function startLoadingBar() {
-            let loadingBar = document.getElementById("loadingBar");
-            let width = 0;
-            let loadingInterval = setInterval(function() {
-                if (width >= 100) {
-                    clearInterval(loadingInterval);
-                } else {
-                    width++;
-                    loadingBar.style.width = width + "%";
-                }
-            }, 50); // Le chargement se fait sur 5 secondes
-        }
-
-        function startCountdown() {
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-            const countdownInterval = setInterval(function() {
-                countdownTime--;
-                countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-                if (countdownTime <= 0) {
-                    clearInterval(countdownInterval);
-                    phoneShutDown(); // Si le compte à rebours est terminé, on éteint le téléphone
-                }
-            }, 1000);
-        }
-
-        function phoneShutDown() {
-            const blackoutElement = document.getElementById('blackout');
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.style.display = 'none';
-            blackoutElement.style.display = 'block';
-            blackoutElement.innerHTML = "<h1>Téléphone éteint</h1><p>By Kabir</p>";
-        }
-    </script>
-</head>
-<body>
-
-    <h1>⚠️ ATTENTION : PIRATAGE EN COURS ⚠️</h1>
-    <p><strong>Votre appareil est sous surveillance. Vos données sont compromises.</strong></p>
-    <p><strong>Cliquez sur le bouton ci-dessous pour voir les logs secrets et observer l'attaque en temps réel.</strong></p>
-
-    <a href="javascript:void(0);" class="button" onclick="fakeHacking()">Cliquez ici pour voir les logs secrets</a>
-
-    <!-- Terminal qui simule l'attaque -->
-    <div id="terminal"></div>
-
-    <!-- Barre de chargement pour l'effet de piratage -->
-    <div class="loading-bar-container">
-        <div id="loadingBar" class="loading-bar"></div>
-    </div>
-
-    <!-- Compte à rebours avant extinction -->
-    <p id="countdown" class="countdown"></p>
-
-    <!-- Écran noir simulant l'extinction du téléphone -->
-    <div id="blackout" class="blackout"></div>
-
-    <footer>
-        <p>© 2025 Piège Apple. Tous droits réservés.</p>
-    </footer>
-
-</body>
-</html>
+            "Redémarrage imminent du
