--- a/index.html
+++ b/index.html
@@ -93,16 +93,25 @@
     }
     #cameraContainer {
       display: none;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      margin-top: 20px;
+      justify-content: center;
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       z-index: 3;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 10px;
+      border: 2px solid red;
+      border-radius: 10px;
     }
     video {
       border: 2px solid red;
       box-shadow: 0 0 10px red;
-      max-width: 90vw;
-      max-height: 220px;
+      width: 100%;
+      max-width: 360px;
+      height: auto;
       filter: grayscale(1) contrast(2) brightness(0.6);
       border-radius: 8px;
       user-select: none;
@@ -141,24 +150,18 @@
   </style>
 </head>
 <body>
-
   <div id="skull">💀💀💀 KABIR SYSTEM – ACCÈS NON AUTORISÉ 💀💀💀</div>
   <canvas id="matrix"></canvas>
   <div id="terminal"></div>
-
   <div id="cameraContainer">
     <video id="camera" autoplay playsinline muted></video>
     <button id="retryCameraBtn" aria-label="Réessayer l'accès à la caméra">Réessayer caméra</button>
   </div>
-
   <div id="countdownTimer" aria-live="polite" aria-atomic="true"></div>
-
   <button id="startBtn" aria-label="Démarrer la simulation">TOUCHER POUR DÉMARRER</button>
-
   <div id="overlayFinal" role="alert" aria-live="assertive" aria-atomic="true">
     🔥 SYSTEM DESTROYED 🔥<br>☠️ YOU ARE DEAD ☠️<br>💣 0xDEAD-FEED 💣
   </div>
-
 <script>
   const terminal = document.getElementById("terminal");
   const startBtn = document.getElementById("startBtn");
