--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
   // Config
   const BASE_TIME = 30;    // secondes de base
-  const TIME_INCREMENT = 00; // par niveau
+  const TIME_INCREMENT = 30; // par niveau
   const MAX_LEVEL = 50;
   const HINT_1_TRIES = 5;
   const HINT_2_TRIES = 8;
@@ -341,7 +341,7 @@
     attempts = 0;
     hintGiven1 = false;
     hintGiven2 = false;
-    timer = BASE_TIME + (level - 1) * TIME_INCREMENT;
+    timer = BASE_TIME;
     updateInfo();
     feedback.textContent = '';
     guessInput.value = '';
@@ -663,4 +663,5 @@
 
 </body>
 </html>
+
 
